Update DebugHudMixin.java